--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,8 @@
       "no-shadow": "off",
       "no-underscore-dangle": ["error",{"allow":["_id"]}],
       "implicit-arrow-linebreak": "off",
-      "function-paren-newline": "off"
+      "function-paren-newline": "off",
+      "no-tabs": "off",
+      "indent": "off"
   }
 }
